# sample_BoostWave

./: .gitignore  CMakeLists.txt  README.md  cmake_vs2012_x86.bat  cmake_vs2013_x86.bat
01_Basic/: CMakeLists.txt
01_Basic/src/: main.cpp
02_SjisBasic/: CMakeLists.txt
02_SjisBasic/src/: main.cpp
03_IgnoreDirectiveHook/: CMakeLists.txt
03_IgnoreDirectiveHook/src/: main.cpp
04_OutputHookInfos/: CMakeLists.txt
04_OutputHookInfos/src/: main.cpp  waveIosDef.h
05_MakeIncludeTree/: CMakeLists.txt
05_MakeIncludeTree/src/: main.cpp
cmake/: cmake_common.bat  common.cmake
common/: LICENSE_encoding  README_encoding.md  wave_utf8.hpp
common/encoding/: charcode.hpp  convert.hpp  convert_as.hpp  convert_from_to.hpp
common/encoding/detail/: converter.hpp  has_value_type.hpp  narrow.hpp  utf8.hpp
